# strands-agents-playground

./: .dockerignore  .gitignore  README.md  cdk.json  pyproject.toml
docker/: compose.yaml
docker/images/agentcore/: Dockerfile
infra/: app.py  common.py
infra/stacks/: agentcore.py  base.py
src/playground/: agentcore.py  main.py
src/playground/agents/: builder.py  my_agent.py
src/playground/agents/hooks/: use_aws.py
src/playground/agents/tools/: controlled_use_aws.py  use_aws.py
src/playground/ui/: chat.py
